Minor fixes to get build working